# chip8

./: .gitignore  CMakeLists.txt
src/: emulator.c  emulator.h  main.c
